// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getDailySelected (characterization) > is stable for 2026-01-15 offset 0 1`] = `
{
  "anthropology": {
    "description": "把一套做法叫做文化，依据的是比较与描述，不是“他们本来就这样”。",
    "title": "文化不是常识",
    "url": "/anthropology/culture-and-method/what-is-culture",
  },
  "arts": {
    "description": "斗拱把屋顶荷载层层传递到柱网；抗震靠的是柔性节点，不是把木头当成石头用。",
    "title": "东亚木构",
    "url": "/arts/architecture/east-asian-timber-frame",
  },
  "chemistry": {
    "description": "冰会浮在水上、水的沸点高得离谱——这些「反常」都源于水分子的极性与氢键，也正是它们让地球宜居。",
    "title": "为什么水这么反常",
    "url": "/chemistry/substances/water",
  },
  "computerScience": {
    "description": "Berners-Lee 1989 年用 HTTP/HTML/URL 三件套，把互联网变成了人人可读写的信息空间。",
    "title": "万维网",
    "url": "/computer-science/pioneers/tim-berners-lee",
  },
  "cosmology": {
    "description": "星系构成纤维状结构和巨大空洞，形成宇宙网。",
    "title": "宇宙大尺度结构",
    "url": "/cosmology/knowledge-base/宇宙大尺度结构",
  },
  "curiosity": {
    "detail": "流行读物把叶序、螺壳和帕特农都写成 φ≈1.618 的宇宙密码，像植物发芽前读过一份秘密比例。叶序里的黄金角是真的：新原基互相推开，最密堆积会收敛到圆的无理旋转；斐波那契计数是这套动力学的整数影子。把同一比值事后贴到神庙立面或钱包上，是十九世纪才发明的审美神话——马克夫斯基 1992 年逐条拆过：量点可调，总能凑出 1.6。植物没有入会，测量者在选点。",
    "title": "向日葵、鹦鹉螺和信用卡，看起来都在执行同一份黄金分割密教",
    "url": "/arts/foundations/proportion-and-harmony",
  },
  "date": "2026-01-15",
  "earthScience": {
    "description": "地球表层裂成约十几块板块，它们的汇聚、离散与错动，塑造了地震带、火山链与高山。",
    "title": "板块边界",
    "url": "/earth-science/concepts/plate-boundaries",
  },
  "economics": {
    "description": "IMF正式成立，监督国际货币体系。",
    "title": "国际货币基金组织成立",
    "url": "/economics/case-studies/bretton-woods",
    "year": 1947,
  },
  "education": {
    "description": "国际测评比较的是抽样与试卷设计下的表现，不能直接写成国民素质。",
    "title": "PISA 不是文明排名",
    "url": "/education/comparison-and-policy/pisa-is-not-civilization",
  },
  "engineering": {
    "description": "事故残骸是工程的教科书：断口、疲劳纹和腐蚀痕迹比事后叙述更诚实。",
    "title": "失效分析",
    "url": "/engineering/frontiers/failure-analysis",
  },
  "fact": "1月是罗马神话中双面神雅努斯的月份，象征回顾过去与展望未来",
  "history": {
    "description": "德国共产党领导人被杀",
    "title": "罗莎·卢森堡遇害",
    "url": "/human-history/figures/罗莎·卢森堡",
    "year": 1919,
  },
  "law": {
    "description": "文本、意图与目的会指向不同答案；解释方法本身就是一场关于谁有权说法律是什么的争论。",
    "title": "法规解释之争",
    "url": "/law/foundations/statutory-interpretation",
  },
  "lifeScience": {
    "description": "人体内寄居着约38万亿微生物，它们影响免疫、消化甚至情绪和行为。",
    "title": "微生物组",
    "url": "/life-science/knowledge-base/人体--微生物组",
  },
  "linguistics": {
    "description": "语言巢、官方地位和社区学校可以把濒危语言拉回日常使用，但成功取决于制度，不只是词典。",
    "title": "濒危语言复振",
    "url": "/linguistics/history-typology-society/endangered-language-revitalization",
  },
  "literature": {
    "description": "主题和寓意必须挂到具体论者；能对质的是用词、句法与所据版本。",
    "title": "细读要拿出文本",
    "url": "/literature/theory-and-method",
  },
  "mathematics": {
    "description": "曼德博集合展示了简单迭代规则如何产生无限复杂的图案，揭示了混沌中的秩序。",
    "title": "分形几何",
    "url": "/mathematics/concepts/fractal",
  },
  "medicine": {
    "description": "1854 年伦敦霍乱，斯诺用一张点子地图把疫情锁定到一口水井，移走泵柄——流行病学就此诞生。",
    "title": "斯诺与宽街水泵",
    "url": "/medicine/events/snow-cholera-broad-street",
  },
  "onThisDay": [
    {
      "day": 15,
      "description": "免费在线百科全书诞生",
      "domain": "人类历史",
      "domainColor": "#f59e0b",
      "month": 1,
      "title": "维基百科上线",
      "url": "/human-history/events/数字革命",
      "year": 2001,
    },
  ],
  "philosophy": {
    "description": "美国民权运动领袖诞生",
    "title": "马丁·路德·金出生",
    "url": "/human-history/figures/马丁·路德·金",
    "year": 1929,
  },
  "physics": {
    "description": "苏联发射了第一颗人造地球卫星，开启了太空时代。",
    "title": "斯普特尼克1号发射",
    "url": "/engineering/machines/space-engineering",
    "year": 1957,
  },
  "politicalScience": {
    "description": "V-Dem 等指标显示，21 世纪以来生活在专制化进程中的人口显著上升，民主并非单向前进。",
    "title": "民主衰退",
    "url": "/political-science/frontier/democratic-backsliding",
  },
  "psychology": {
    "description": "所罗门·阿希进行经典的从众效应实验。",
    "title": "阿希从众实验",
    "url": "/psychology/experiments/asch-conformity",
    "year": 1951,
  },
  "question": "人工智能能真正理解美吗？",
  "religion": {
    "description": "用一神、救赎、教会去套别的传统，比较的是范畴，不是世界本身。",
    "title": "比较会改写对象",
    "url": "/religion/comparative-religion",
  },
  "seed": 20260115,
  "sociology": {
    "description": "杜波依斯指出，被支配群体常被迫同时用自己的眼睛和支配者的眼睛看自己。",
    "title": "双重意识",
    "url": "/sociology/thinkers/w-e-b-du-bois",
  },
}
`;

exports[`getDailySelected (characterization) > is stable for 2026-03-14 offset 0 1`] = `
{
  "anthropology": {
    "description": "互惠不是礼貌。给出、接受与回报把人绑进可观察的关系，而不是单纯的慷慨。",
    "title": "礼物会制造义务",
    "url": "/anthropology/kinship-and-exchange/gift-and-reciprocity",
  },
  "arts": {
    "description": "纪念碑争的不是石头，而是谁被公共空间记住、由谁决定拆除或保留。",
    "title": "公共纪念碑",
    "url": "/arts/aesthetics/public-art-and-monuments",
  },
  "chemistry": {
    "description": "把空气里惰性的氮变成肥料，养活了今天近一半的人口；同样的技术也造出了炸药——一项发明的两副面孔。",
    "title": "哈伯-博施合成氨",
    "url": "/chemistry/milestones/haber-bosch-process",
  },
  "computerScience": {
    "description": "一个函数调用自身——用有限的代码描述无限的结构，是计算思维最优雅的核心之一。",
    "title": "递归",
    "url": "/computer-science/concepts/recursion",
  },
  "cosmology": {
    "description": "氢和氦在大爆炸中形成，其他元素在恒星内部和超新星爆发中合成。",
    "title": "宇宙的元素起源",
    "url": "/cosmology/knowledge-base/宇宙学基础--太初核合成",
  },
  "curiosity": {
    "detail": "有一种说法是：卫星定位靠牛顿力学就够，公开文件里的相对论修正是航天机构用来「证明」爱因斯坦的道具。实情写在公开的接口规范里：星载钟在较弱引力势中每天快约 45 微秒，运动学效应又让它慢约 7 微秒，净快约 38 微秒；不预偏、不监测，伪距会按光速把钟差摊成每天约 11 公里的漂移。这不是密室里的伪造，是把已经发表的钟率写进工程预算——接口控制文件谁都可以读。",
    "title": "GPS 钟每天要改三十八微秒，看起来像有人把广义相对论写进了导航骗局",
    "url": "/universe-physics/knowledge-base/相对论--引力红移与引力时间膨胀",
  },
  "date": "2026-03-14",
  "earthScience": {
    "description": "魏格纳 1912 年提出大陆曾连成一体，因拿不出移动机制被嘲笑半个世纪，直到板块构造为他平反。",
    "title": "大陆漂移",
    "url": "/earth-science/pioneers/alfred-wegener",
  },
  "economics": {
    "description": "约翰·梅纳德·凯恩斯发表《就业、利息和货币通论》。",
    "title": "凯恩斯发表《通论》",
    "url": "/economics/economists/john-maynard-keynes",
    "year": 1936,
  },
  "education": {
    "description": "把学习写成行为、判断或作业上的变化，才能核对；“懂了”本身无法当证据。",
    "title": "学会了是可观察的改变",
    "url": "/education/learning-foundations/what-is-learning",
  },
  "engineering": {
    "description": "精密的代价是时间和钱；公差写的是可接受的偏差，不是「尽量准」。",
    "title": "测量与公差",
    "url": "/engineering/foundations/measurement-and-tolerance",
  },
  "fact": "春分通常在3月20日或21日，全球昼夜几乎等长",
  "history": {
    "description": "美国国歌在巴尔的摩诞生",
    "title": "《星条旗》创作",
    "url": "/human-history/knowledge/事件--美国革命",
    "year": 1814,
  },
  "law": {
    "description": "看得见的正义要求告知、听证和中立裁判；结果对，程序也可以是错的。",
    "title": "程序正义",
    "url": "/law/criminal-and-procedure/procedural-justice",
  },
  "lifeScience": {
    "description": "米勒-尤里实验证明，原始地球条件下无机物可以自发形成氨基酸等有机分子。",
    "title": "生命的化学起源",
    "url": "/life-science/knowledge-base/当代议题--生命起源研究",
  },
  "linguistics": {
    "description": "各「方言」口语差距可达语言一级；称为方言还是语言，取决于互通度之外的历史与政治标准。",
    "title": "汉语方言还是语言",
    "url": "/linguistics/history-typology-society/chinese-dialects",
  },
  "literature": {
    "description": "接受不是被动接收。教材、译本与书市决定哪些作品被反复读到。",
    "title": "读者也在生产意义",
    "url": "/literature/reading-and-reception",
  },
  "mathematics": {
    "description": "V - E + F = 2 揭示了多面体的顶点、边和面之间的基本关系。",
    "title": "欧拉公式",
    "url": "/mathematics/concepts/topology",
  },
  "medicine": {
    "description": "詹纳发现挤奶女工不得天花，用牛痘为一个男孩接种——人类第一支疫苗，最终让天花成为唯一被根除的传染病。",
    "title": "牛痘接种 1796",
    "url": "/medicine/events/jenner-smallpox-vaccination",
  },
  "onThisDay": [
    {
      "day": 14,
      "description": "理论物理学家斯蒂芬·霍金辞世",
      "domain": "宇宙物理",
      "domainColor": "#6366f1",
      "month": 3,
      "title": "霍金去世",
      "url": "/universe-physics/dialogues/hawking-penrose",
      "year": 2018,
    },
  ],
  "philosophy": {
    "description": "法国存在主义哲学家，诺贝尔文学奖拒绝者",
    "title": "萨特出生",
    "url": "/philosophy/thinkers/sartre",
    "year": 1905,
  },
  "physics": {
    "description": "阿尔伯特·爱因斯坦出生于德国乌尔姆，后来提出了狭义和广义相对论。",
    "title": "爱因斯坦出生",
    "url": "/universe-physics/knowledge-base/相对论--狭义相对论",
    "year": 1879,
  },
  "politicalScience": {
    "description": "在没有世界政府的情况下，联合国、WTO、IMF 等机制如何协调一个相互依存却主权林立的世界？",
    "title": "全球治理",
    "url": "/political-science/international-relations/global-governance",
  },
  "psychology": {
    "description": "丹尼尔·卡尼曼因行为经济学研究获得诺贝尔经济学奖。",
    "title": "卡尼曼获诺贝尔奖",
    "url": "/psychology/theorists/daniel-kahneman",
    "year": 2002,
  },
  "question": "如果时间可以倒流，你最想见证哪个历史时刻？",
  "religion": {
    "description": "哪些文本被反复抄写、宣读和考试，比“天启”更容易核对。",
    "title": "正典是一份名单",
    "url": "/religion/texts-and-canons",
  },
  "seed": 20260314,
  "sociology": {
    "description": "统计模型要同时说明变量、样本、效应大小和不确定性；相关关系不能自动变成因果解释。",
    "title": "统计模型不是显著星号",
    "url": "/sociology/methods/statistical-modeling",
  },
}
`;

exports[`getDailySelected (characterization) > is stable for 2026-03-14 offset 1 1`] = `
{
  "anthropology": {
    "description": "把一套做法叫做文化，依据的是比较与描述，不是“他们本来就这样”。",
    "title": "文化不是常识",
    "url": "/anthropology/culture-and-method/what-is-culture",
  },
  "arts": {
    "description": "展墙顺序、标签和灯光都是论证；展示本身决定谁被看见、谁被省略。",
    "title": "博物馆在讲谁的故事",
    "url": "/arts/aesthetics/museums-and-display",
  },
  "chemistry": {
    "description": "在他之前，人们以为燃烧是物质释放「燃素」。拉瓦锡用天平证明燃烧其实是与氧结合——化学从此进入定量时代。",
    "title": "拉瓦锡的氧化学革命",
    "url": "/chemistry/milestones/lavoisier-oxygen-revolution",
  },
  "computerScience": {
    "description": "Berners-Lee 1989 年用 HTTP/HTML/URL 三件套，把互联网变成了人人可读写的信息空间。",
    "title": "万维网",
    "url": "/computer-science/pioneers/tim-berners-lee",
  },
  "cosmology": {
    "description": "暗物质晕是星系形成的骨架，普通物质在引力作用下聚集形成恒星和星系。",
    "title": "星系的形成",
    "url": "/cosmology/knowledge-base/星系形成与演化",
  },
  "curiosity": {
    "detail": "频率错觉（又称 Baader-Meinhof 现象）：一旦某车牌、某病名、某术语进入你的注意，它就像被安排着反复出现。齐茨基 2006 年把它拆成两步：选择性注意加上确认偏误。可得性启发会再补一刀：越容易想起，越觉得「最近特别多」。看起来像有人在协调投放，其实是你的过滤器换了设定，底噪从来都在。",
    "title": "你刚认识一个词，全世界突然都在用——世界没有串通，是注意被打开了",
    "url": "/psychology/phenomena/availability-heuristic",
  },
  "date": "2026-03-14",
  "earthScience": {
    "description": "我们钻不到地心，却靠地震波的「影区」听出了地壳、地幔、液态外核与固态内核的分层。",
    "title": "地球内部",
    "url": "/earth-science/concepts/earth-interior",
  },
  "economics": {
    "description": "卡尔·马克思的《资本论》第一卷在汉堡出版。",
    "title": "《资本论》第一卷出版",
    "url": "/economics/economists/karl-marx",
    "year": 1867,
  },
  "education": {
    "description": "国际测评比较的是抽样与试卷设计下的表现，不能直接写成国民素质。",
    "title": "PISA 不是文明排名",
    "url": "/education/comparison-and-policy/pisa-is-not-civilization",
  },
  "engineering": {
    "description": "桥不是「够结实」就行：荷载必须有一条清楚的路从桥面走到地基，风和振动另算。",
    "title": "桥梁的受力路径",
    "url": "/engineering/civil/bridges",
  },
  "fact": "3月的英文March来自罗马战神马尔斯",
  "history": {
    "description": "物理学家阿尔伯特·爱因斯坦诞生",
    "title": "爱因斯坦出生",
    "url": "/human-history/figures/爱因斯坦",
    "year": 1879,
  },
  "law": {
    "description": "姜汁啤酒里的蜗牛，把邻人原则写进普通法：你必须合理注意可预见会受影响的人。",
    "title": "Donoghue 的注意义务",
    "url": "/law/judgment-analyses/donoghue-v-stevenson-duty-of-care",
  },
  "lifeScience": {
    "description": "干细胞可以分化为人体200多种细胞类型中的任何一种，是再生医学的希望。",
    "title": "干细胞的潜力",
    "url": "/life-science/knowledge-base/分子生物学--干细胞",
  },
  "linguistics": {
    "description": "强萨丕尔-沃尔夫假说已被放弃；弱版本——词汇边界影响分类速度——在颜色等领域有谨慎的实验支持。",
    "title": "语言是否塑造思维",
    "url": "/linguistics/acquisition-and-mind/language-thought-debate",
  },
  "literature": {
    "description": "主题和寓意必须挂到具体论者；能对质的是用词、句法与所据版本。",
    "title": "细读要拿出文本",
    "url": "/literature/theory-and-method",
  },
  "mathematics": {
    "description": "纳什均衡揭示了在非合作博弈中，每个参与者都选择最优策略时的状态。",
    "title": "博弈论",
    "url": "/mathematics/concepts/game-theory",
  },
  "medicine": {
    "description": "在巴斯德与科赫之前，人们以为疾病源自「瘴气」。证明微生物才是元凶，是医学史上最救命的范式转换之一。",
    "title": "细菌致病论",
    "url": "/medicine/concepts/germ-theory",
  },
  "onThisDay": [
    {
      "day": 14,
      "description": "理论物理学家斯蒂芬·霍金辞世",
      "domain": "宇宙物理",
      "domainColor": "#6366f1",
      "month": 3,
      "title": "霍金去世",
      "url": "/universe-physics/dialogues/hawking-penrose",
      "year": 2018,
    },
  ],
  "philosophy": {
    "description": "进化论奠基人，影响了哲学对生命与存在的思考",
    "title": "达尔文出生",
    "url": "/life-science/scientists/darwin",
    "year": 1809,
  },
  "physics": {
    "description": "斯蒂芬·霍金在剑桥去世，享年76岁。他关于黑洞和宇宙起源的研究改变了现代物理学。",
    "title": "霍金逝世",
    "url": "/universe-physics/dialogues/hawking-penrose",
    "year": 2018,
  },
  "politicalScience": {
    "description": "V-Dem 等指标显示，21 世纪以来生活在专制化进程中的人口显著上升，民主并非单向前进。",
    "title": "民主衰退",
    "url": "/political-science/frontier/democratic-backsliding",
  },
  "psychology": {
    "description": "米哈里·契克森米哈赖的心流理论被广泛接受。",
    "title": "契克森米哈赖心流理论普及",
    "url": "/psychology/theorists/mihaly-csikszentmihalyi",
    "year": 2000,
  },
  "question": "人类探索太空的意义是什么？",
  "religion": {
    "description": "通过仪礼把人从一种社会位置送到另一种；步骤是分析范畴，不是操作指南。",
    "title": "仪式改变身份",
    "url": "/religion/religion-foundations/ritual-and-practice",
  },
  "seed": 20268233,
  "sociology": {
    "description": "费孝通用水波纹比喻中国社会关系：责任和信任常按亲疏远近展开，而不是只按组织边界划分。",
    "title": "差序格局",
    "url": "/sociology/concepts/chinese-social-thought",
  },
}
`;

exports[`getDailySelected (characterization) > is stable for 2026-06-16 offset 0 1`] = `
{
  "anthropology": {
    "description": "工具、织物与收藏不是背景。谁能用、谁能传、谁被排除，写在物的流通上。",
    "title": "物也在规定人",
    "url": "/anthropology/material-culture/things-and-persons",
  },
  "arts": {
    "description": "色彩同时是光学、材料和惯例；同一种红在不同光与底子上不是同一个红。",
    "title": "色彩不是颜料表",
    "url": "/arts/foundations/color-and-light",
  },
  "chemistry": {
    "description": "1869 年门捷列夫排出周期表时，故意留下空格并预言了未知元素的性质——后来镓、锗的发现一一应验，堪称化学最漂亮的预言。",
    "title": "门捷列夫的周期表",
    "url": "/chemistry/milestones/mendeleev-periodic-law",
  },
  "computerScience": {
    "description": "香农 1948 年用「比特」量化了信息，证明了任何信道都有不可逾越的容量上限。",
    "title": "香农信息论",
    "url": "/computer-science/pioneers/claude-shannon",
  },
  "cosmology": {
    "description": "约占宇宙总能量的68%，是推动宇宙加速膨胀的神秘力量。",
    "title": "暗能量",
    "url": "/cosmology/knowledge-base/宇宙学基础--暗能量与状态方程",
  },
  "curiosity": {
    "detail": "皇家学会 1712 年的《通信汇编》把莱布尼茨写成抄袭者——牛顿当时正是会长，像一场内定审判。数学史现在的主流判断是独立发明：牛顿 1660 年代已有流数法，莱布尼茨 1670 年代独立发展出更易传播的符号。默顿 1957 年把这类撕扯写成科学奖励制度的必然产物：只认「第一名」，优先权就会被争夺，并不需要有人偷手稿。",
    "title": "牛顿与莱布尼茨的微积分优先权官司，看起来像跨国盗窃",
    "url": "/mathematics/dialogues/newton-leibniz",
  },
  "date": "2026-06-16",
  "earthScience": {
    "description": "AMOC、冰盖、雨林等系统可能存在不可逆的「临界点」——高后果但充满不确定，是当下最受关注的前沿。",
    "title": "气候临界点",
    "url": "/earth-science/frontier/climate-tipping-points",
  },
  "economics": {
    "description": "美国股市暴跌，大萧条开始。",
    "title": "黑色星期二",
    "url": "/economics/case-studies/great-depression",
    "year": 1929,
  },
  "education": {
    "description": "教什么、按什么次序、删掉什么，都是制度决定；中立的知识管道并不存在。",
    "title": "课程是一份选择",
    "url": "/education/curriculum-and-teaching/curriculum-as-selection",
  },
  "engineering": {
    "description": "电池效率有物理上限；真正难的是把白天的电留到晚上，并让整张网跟着天气呼吸。",
    "title": "光伏与间歇性",
    "url": "/engineering/energy/solar-and-wind",
  },
  "fact": "6月的英文June来自罗马婚姻女神朱诺",
  "history": {
    "description": "世界首位女宇航员进入太空",
    "title": "瓦莲京娜·捷列什科娃",
    "url": "/engineering/machines/space-engineering",
    "year": 1963,
  },
  "law": {
    "description": "霍菲尔德把含糊的「权利」拆成请求权、特权、权力和豁免——混用这四者会让论证自己打架。",
    "title": "权利与义务的解剖",
    "url": "/law/foundations/rights-and-duties",
  },
  "lifeScience": {
    "description": "1953年沃森和克里克发现了DNA的双螺旋结构，开启了分子生物学时代。",
    "title": "DNA的双螺旋",
    "url": "/life-science/knowledge-base/人体--DNA与遗传",
  },
  "linguistics": {
    "description": "所谓「爱斯基摩人有几十个雪的词」是被反复转述的都市传说，语言学自己已经把它拆开过了。",
    "title": "爱斯基摩雪词神话",
    "url": "/linguistics/history-typology-society/eskimo-snow-words-hoax",
  },
  "literature": {
    "description": "“发生了一件事”还不是故事；叙述要把谁对谁做了什么，按可核对的次序讲出来。",
    "title": "故事是一种结构",
    "url": "/literature/narrative-basics",
  },
  "mathematics": {
    "description": "罗素悖论动摇了朴素集合论的基础，推动了公理化集合论的发展。",
    "title": "集合论悖论",
    "url": "/mathematics/paradoxes/russels-paradox",
  },
  "medicine": {
    "description": "美国一项持续 40 年、刻意不予治疗的研究，是医学伦理最黑暗的一页，直接催生了「知情同意」制度。",
    "title": "塔斯基吉梅毒研究",
    "url": "/medicine/events/tuskegee-syphilis-study",
  },
  "onThisDay": [],
  "philosophy": {
    "description": "德国古典哲学创始人，三大批判影响深远",
    "title": "康德出生",
    "url": "/philosophy/thinkers/kant",
    "year": 1724,
  },
  "physics": {
    "description": "印尼喀拉喀托火山发生史上最猛烈的火山爆发之一。",
    "title": "喀拉喀托火山爆发",
    "url": "/earth-science/events/krakatoa-1883",
    "year": 1883,
  },
  "politicalScience": {
    "description": "在没有世界政府的无政府状态下，国家只能自助求存——这是理解大国博弈的经典视角之一。",
    "title": "国际关系现实主义",
    "url": "/political-science/international-relations/realism-ir",
  },
  "psychology": {
    "description": "华生和雷纳进行经典条件反射情绪实验。",
    "title": "小阿尔伯特实验",
    "url": "/psychology/theorists/john-watson",
    "year": 1920,
  },
  "question": "人类文明的下一个重大突破会是什么？",
  "religion": {
    "description": "参与、认同与制度特权可以分开下降。一条曲线不能代表宗教消失。",
    "title": "世俗化测的是哪一项",
    "url": "/religion/secularization",
  },
  "seed": 20260616,
  "sociology": {
    "description": "韦伯看到现代组织越来越依赖计算、规则和程序；它提高效率，也可能把人困进制度铁笼。",
    "title": "理性化与铁笼",
    "url": "/sociology/thinkers/max-weber-sociology",
  },
}
`;

exports[`getDailySelected (characterization) > is stable for 2026-06-16 offset 2 1`] = `
{
  "anthropology": {
    "description": "互惠不是礼貌。给出、接受与回报把人绑进可观察的关系，而不是单纯的慷慨。",
    "title": "礼物会制造义务",
    "url": "/anthropology/kinship-and-exchange/gift-and-reciprocity",
  },
  "arts": {
    "description": "纪念碑争的不是石头，而是谁被公共空间记住、由谁决定拆除或保留。",
    "title": "公共纪念碑",
    "url": "/arts/aesthetics/public-art-and-monuments",
  },
  "chemistry": {
    "description": "呼吸、生锈、电池、燃烧，本质上都是电子从一处搬到另一处。氧化还原把这些看似无关的现象统一了起来。",
    "title": "氧化还原：电子的搬运",
    "url": "/chemistry/concepts/redox-reactions",
  },
  "computerScience": {
    "description": "没有任何程序能对所有「程序+输入」判断它会停机还是永远运行——计算机科学第一个不可能性定理。",
    "title": "停机问题",
    "url": "/computer-science/theory/computability",
  },
  "cosmology": {
    "description": "氢和氦在大爆炸中形成，其他元素在恒星内部和超新星爆发中合成。",
    "title": "宇宙的元素起源",
    "url": "/cosmology/knowledge-base/宇宙学基础--太初核合成",
  },
  "curiosity": {
    "detail": "看起来像有人窃听了学术界：GCHQ 的 Ellis（1969）提出「非秘密加密」，Cocks（1973）写出与 RSA 等价的方案，Williamson（1974）又独立得到与 Diffie–Hellman 等价的密钥交换——全比 1976–1978 年的公开论文更早。其实不是学术圈被渗透，是分类制度：这批笔记直到 1997 年才解密，Ellis 去世前一个月仍未获公开承认。同一套数学在保密机关与公开学界各走一遍，才是 1970 年代公钥的真实诞生图。",
    "title": "公钥密码在斯坦福「发明」之前四年，已经锁在英国机密柜里",
    "url": "/computer-science/concepts/encryption-basics",
  },
  "date": "2026-06-16",
  "earthScience": {
    "description": "史上最大喷发之一，平流层硫气溶胶让 1816 成为北半球「无夏之年」，饥荒与迁徙改写了历史。",
    "title": "坦博拉火山 1815",
    "url": "/earth-science/events/tambora-1815",
  },
  "economics": {
    "description": "约翰·梅纳德·凯恩斯发表《就业、利息和货币通论》。",
    "title": "凯恩斯发表《通论》",
    "url": "/economics/economists/john-maynard-keynes",
    "year": 1936,
  },
  "education": {
    "description": "把学习写成行为、判断或作业上的变化，才能核对；“懂了”本身无法当证据。",
    "title": "学会了是可观察的改变",
    "url": "/education/learning-foundations/what-is-learning",
  },
  "engineering": {
    "description": "精密的代价是时间和钱；公差写的是可接受的偏差，不是「尽量准」。",
    "title": "测量与公差",
    "url": "/engineering/foundations/measurement-and-tolerance",
  },
  "fact": "夏至通常在6月21日，北半球白昼最长",
  "history": {
    "description": "世界首位女宇航员进入太空",
    "title": "瓦莲京娜·捷列什科娃",
    "url": "/engineering/machines/space-engineering",
    "year": 1963,
  },
  "law": {
    "description": "看得见的正义要求告知、听证和中立裁判；结果对，程序也可以是错的。",
    "title": "程序正义",
    "url": "/law/criminal-and-procedure/procedural-justice",
  },
  "lifeScience": {
    "description": "米勒-尤里实验证明，原始地球条件下无机物可以自发形成氨基酸等有机分子。",
    "title": "生命的化学起源",
    "url": "/life-science/knowledge-base/当代议题--生命起源研究",
  },
  "linguistics": {
    "description": "各「方言」口语差距可达语言一级；称为方言还是语言，取决于互通度之外的历史与政治标准。",
    "title": "汉语方言还是语言",
    "url": "/linguistics/history-typology-society/chinese-dialects",
  },
  "literature": {
    "description": "接受不是被动接收。教材、译本与书市决定哪些作品被反复读到。",
    "title": "读者也在生产意义",
    "url": "/literature/reading-and-reception",
  },
  "mathematics": {
    "description": "V - E + F = 2 揭示了多面体的顶点、边和面之间的基本关系。",
    "title": "欧拉公式",
    "url": "/mathematics/concepts/topology",
  },
  "medicine": {
    "description": "凭名医经验还是凭随机对照试验？循证医学主张让证据而非权威说话——这场静悄悄的革命重塑了现代临床。",
    "title": "循证医学",
    "url": "/medicine/concepts/evidence-based-medicine",
  },
  "onThisDay": [],
  "philosophy": {
    "description": "近代科学之父，科学方法论的奠基人",
    "title": "伽利略出生",
    "url": "/human-history/figures/伽利略",
    "year": 1564,
  },
  "physics": {
    "description": "V-2火箭成为第一个到达太空边缘的人造物体。",
    "title": "V-2火箭首次发射",
    "url": "/engineering/machines/space-engineering",
    "year": 1945,
  },
  "politicalScience": {
    "description": "谁拥有最终的、不可分割的决断权？从博丹到当代，主权概念一直是政治秩序的根问题。",
    "title": "主权",
    "url": "/political-science/concepts/sovereignty",
  },
  "psychology": {
    "description": "伊万·巴甫洛夫因消化生理学研究获得诺贝尔奖。",
    "title": "巴甫洛夫获诺贝尔奖",
    "url": "/psychology/theorists/ivan-pavlov",
    "year": 1904,
  },
  "question": "如果时间可以倒流，你最想见证哪个历史时刻？",
  "religion": {
    "description": "哪些文本被反复抄写、宣读和考试，比“天启”更容易核对。",
    "title": "正典是一份名单",
    "url": "/religion/texts-and-canons",
  },
  "seed": 20276454,
  "sociology": {
    "description": "分层不只是收入差距，还包括教育、资产、健康、关系网络和失败后能否重新开始的机会。",
    "title": "社会分层",
    "url": "/sociology/concepts/social-stratification",
  },
}
`;

exports[`getDailySelected (characterization) > is stable for 2026-12-25 offset 0 1`] = `
{
  "anthropology": {
    "description": "把一套做法叫做文化，依据的是比较与描述，不是“他们本来就这样”。",
    "title": "文化不是常识",
    "url": "/anthropology/culture-and-method/what-is-culture",
  },
  "arts": {
    "description": "斗拱把屋顶荷载层层传递到柱网；抗震靠的是柔性节点，不是把木头当成石头用。",
    "title": "东亚木构",
    "url": "/arts/architecture/east-asian-timber-frame",
  },
  "chemistry": {
    "description": "在他之前，人们以为燃烧是物质释放「燃素」。拉瓦锡用天平证明燃烧其实是与氧结合——化学从此进入定量时代。",
    "title": "拉瓦锡的氧化学革命",
    "url": "/chemistry/milestones/lavoisier-oxygen-revolution",
  },
  "computerScience": {
    "description": "Transformer 架构 + 规模化，让机器在海量文本上「涌现」出推理与对话能力，也引发它是否真正理解的争论。",
    "title": "大语言模型",
    "url": "/computer-science/frontier/large-language-models",
  },
  "cosmology": {
    "description": "暗物质晕是星系形成的骨架，普通物质在引力作用下聚集形成恒星和星系。",
    "title": "星系的形成",
    "url": "/cosmology/knowledge-base/星系形成与演化",
  },
  "curiosity": {
    "detail": "阿尔瓦雷茨父子 1980 年报告：白垩纪—古近纪界线的黏土里铱含量异常，而且远隔大洋的剖面几乎同时出现。铱在地壳里稀、在某些陨石里富，全球一层就很像被统一投料。后来尤卡坦半岛的希克苏鲁伯坑把「谁撒的」收成一次撞击：粉尘、火灾、食物网断裂写在同一条时间线上。不是有人沿纬度撒粉，是一块外来石头把账本复印到全世界。",
    "title": "全世界同一层黏土里都有铱，像有人把地球表面撒了一圈粉末",
    "url": "/earth-science/events/chicxulub-impact",
  },
  "date": "2026-12-25",
  "earthScience": {
    "description": "我们钻不到地心，却靠地震波的「影区」听出了地壳、地幔、液态外核与固态内核的分层。",
    "title": "地球内部",
    "url": "/earth-science/concepts/earth-interior",
  },
  "economics": {
    "description": "IMF正式成立，监督国际货币体系。",
    "title": "国际货币基金组织成立",
    "url": "/economics/case-studies/bretton-woods",
    "year": 1947,
  },
  "education": {
    "description": "国际测评比较的是抽样与试卷设计下的表现，不能直接写成国民素质。",
    "title": "PISA 不是文明排名",
    "url": "/education/comparison-and-policy/pisa-is-not-civilization",
  },
  "engineering": {
    "description": "事故残骸是工程的教科书：断口、疲劳纹和腐蚀痕迹比事后叙述更诚实。",
    "title": "失效分析",
    "url": "/engineering/frontiers/failure-analysis",
  },
  "fact": "12月的英文December来自拉丁语decem（十）",
  "history": {
    "description": "诺曼征服完成",
    "title": "威廉加冕英国国王",
    "url": "/human-history/knowledge/文明--中世纪欧洲",
    "year": 1066,
  },
  "law": {
    "description": "文本、意图与目的会指向不同答案；解释方法本身就是一场关于谁有权说法律是什么的争论。",
    "title": "法规解释之争",
    "url": "/law/foundations/statutory-interpretation",
  },
  "lifeScience": {
    "description": "人体内寄居着约38万亿微生物，它们影响免疫、消化甚至情绪和行为。",
    "title": "微生物组",
    "url": "/life-science/knowledge-base/人体--微生物组",
  },
  "linguistics": {
    "description": "语言巢、官方地位和社区学校可以把濒危语言拉回日常使用，但成功取决于制度，不只是词典。",
    "title": "濒危语言复振",
    "url": "/linguistics/history-typology-society/endangered-language-revitalization",
  },
  "literature": {
    "description": "主题和寓意必须挂到具体论者；能对质的是用词、句法与所据版本。",
    "title": "细读要拿出文本",
    "url": "/literature/theory-and-method",
  },
  "mathematics": {
    "description": "曼德博集合展示了简单迭代规则如何产生无限复杂的图案，揭示了混沌中的秩序。",
    "title": "分形几何",
    "url": "/mathematics/concepts/fractal",
  },
  "medicine": {
    "description": "在巴斯德与科赫之前，人们以为疾病源自「瘴气」。证明微生物才是元凶，是医学史上最救命的范式转换之一。",
    "title": "细菌致病论",
    "url": "/medicine/concepts/germ-theory",
  },
  "onThisDay": [
    {
      "day": 25,
      "description": "戈尔巴乔夫辞职，苏联正式解体",
      "domain": "人类历史",
      "domainColor": "#f59e0b",
      "month": 12,
      "title": "苏联解体",
      "url": "/human-history/events/苏联解体",
      "year": 1991,
    },
    {
      "day": 25,
      "description": "人类迄今最强大的太空望远镜升空",
      "domain": "宇宙学",
      "domainColor": "#a88adf",
      "month": 12,
      "title": "詹姆斯·韦伯空间望远镜发射",
      "url": "/cosmology/knowledge-base/宇宙学观测--詹姆斯韦伯空间望远镜",
      "year": 2021,
    },
  ],
  "philosophy": {
    "description": "经典物理学奠基人，自然哲学的革新者",
    "title": "牛顿出生",
    "url": "/mathematics/mathematicians/newton",
    "year": 1642,
  },
  "physics": {
    "description": "NASA的维京2号探测器成功在火星着陆。",
    "title": "维京2号登陆火星",
    "url": "/cosmology/knowledge-base/太阳系--terrestrial-planets",
    "year": 1976,
  },
  "politicalScience": {
    "description": "把社会简化为「纯洁的人民」对「腐败的精英」——一种可左可右的「薄意识形态」。",
    "title": "民粹主义",
    "url": "/political-science/isms/populism",
  },
  "psychology": {
    "description": "弗洛伊德出版《梦的解析》，开创精神分析学。",
    "title": "《梦的解析》出版",
    "url": "/psychology/theorists/sigmund-freud",
    "year": 1900,
  },
  "question": "人工智能能真正理解美吗？",
  "religion": {
    "description": "用一神、救赎、教会去套别的传统，比较的是范畴，不是世界本身。",
    "title": "比较会改写对象",
    "url": "/religion/comparative-religion",
  },
  "seed": 20261225,
  "sociology": {
    "description": "韦伯看到现代组织越来越依赖计算、规则和程序；它提高效率，也可能把人困进制度铁笼。",
    "title": "理性化与铁笼",
    "url": "/sociology/thinkers/max-weber-sociology",
  },
}
`;
